# yolo_io

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  mc
examples/: basic.rs  config.yaml  minimal.rs  programmatic.rs
src/: export.rs  file_utils.rs  lib.rs  pairing.rs  report.rs  types.rs  yolo_file.rs
tests/: config_tests.rs  duplicate_testing.rs  example_compile_test.rs  export_tests.rs  invalid_label_tests.rs  pairing_tests.rs  report_tests.rs  yolo_file_tests.rs
tests/common/: mod.rs
