[package]
edition = "2021"
name = "yolo_io"
version = "0.1.0"

[dependencies]
itertools = "0.13.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.129"
serde_yml = "0.0.12"

[dev-dependencies]
image = "0.25.4" # https://docs.rs/image/latest/image/
num-complex = "0.4.6" 
rstest = "0.23.0" # https://docs.rs/rstest/latest/rstest/
