[package]
edition = "2021"
keywords = ["machine-learning", "yolo", "you-only-look-once", "loader", "validation"]
license = "Apache-2.0"
name = "yolo_io"
publish = ["crates-io"]
version = "0.1.0"

authors = ["C. Thomas Brittain <cthomasbrittain@hotmail.com>"]

# categories = ["machine-learning", "image-processing", "data-validation"]
description = "A library for loading and validating YOLO data."
# keywords = ["machine-learning", "yolo", "you-only-look-once", "loader", "validation"]

# documentation = "https://docs.rs/strum"
homepage = "https://github.com/Ladvien/yolo_io"
repository = "https://github.com/Ladvien/yolo_io"

[dependencies]
itertools = "0.13.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.129"
serde_yml = "0.0.12"
thiserror = "1.0"

[dev-dependencies]
image = "0.25.4" # https://docs.rs/image/latest/image/
num-complex = "0.4.6" 
rstest = "0.23.0" # https://docs.rs/rstest/latest/rstest/

# [lints.rust]
# homepage = "https://github.com/Ladvien/yolo_io"
# readme = "README.md"
# unsafe_code = "forbid"
