[package]
authors = ["C. Thomas Brittain <cthomasbrittain@hotmail.com>"]
edition = "2021"
license = "Apache-2.0"
name = "yolo_io"
publish = ["crates-io"]
version = "0.1.102"

description = "A library for loading and validating YOLO data."
documentation = "https://docs.rs/yolo_io/latest/yolo_io/"
homepage = "https://github.com/Ladvien/yolo_io"
keywords = ["machine-learning", "yolo", "you-only-look-once", "loader", "validation"]
repository = "https://github.com/Ladvien/yolo_io"
# categories = ["machine-learning", "image-processing", "data-validation"]

[dependencies]
itertools = "0.13.0"
rand = "0.8.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.129"
serde_yml = "0.0.12"
thiserror = "1.0"

[dev-dependencies]
image = "0.25.4" # https://docs.rs/image/latest/image/
num-complex = "0.4.6" 
rstest = "0.23.0" # https://docs.rs/rstest/latest/rstest/

[lints.rust]
unsafe_code = "forbid"
